--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "linaria": "^2.3.1",
+    "mongodb": "^4.5.0",
     "next": "12.1.0",
     "next-linaria": "^0.11.0",
     "react": "17.0.2",
