--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
+    "bcrypt": "^5.0.1",
+    "cookie": "^0.5.0",
+    "jsonwebtoken": "^8.5.1",
     "linaria": "^2.3.1",
     "mongodb": "^4.5.0",
     "next": "12.1.0",
@@ -22,6 +25,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "@types/react-dom": "^17.0.11",
