--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "12.1.0",
     "next-linaria": "^0.11.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -31,6 +32,7 @@
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "prettier": "^2.5.1",
